feat: get authenticated user transactions
