# src/main/java/app/bpartners/api/endpoint/rest/security/SecurityConf.java
@@ -78,6 +78,7 @@ public class SecurityConf extends WebSecurityConfigurerAdapter {
         .antMatchers("/onboarding").permitAll()
         .antMatchers(POST, "/preUsers").permitAll()
         .antMatchers(OPTIONS, "/**").permitAll()
+        .antMatchers(GET, "/transactions").authenticated()
         .antMatchers(GET, "/whoami").authenticated()
         .antMatchers(GET, "/preUsers").authenticated()
         .antMatchers(GET, "/whoami").authenticated()
