# src/main/java/app/bpartners/api/model/TransactionCategory.java
@@ -1,0 +1,19 @@
+package app.bpartners.api.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode
+public class TransactionCategory {
+  String id;
+  String label;
+}
