# src/main/java/app/bpartners/api/model/entity/HTransactionCategory.java
@@ -1,0 +1,33 @@
+package app.bpartners.api.model.entity;
+
+import java.io.Serializable;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
+
+import static javax.persistence.GenerationType.IDENTITY;
+
+@Entity
+@Table(name = "\"transaction_category\"")
+@Getter
+@Setter
+@ToString
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode
+public class HTransactionCategory implements Serializable {
+  @Id
+  @GeneratedValue(strategy = IDENTITY)
+  private String id;
+
+  private String label;
+}
