# src/main/java/app/bpartners/api/model/mapper/TransactionMapper.java
@@ -1,0 +1,29 @@
+package app.bpartners.api.model.mapper;
+
+import app.bpartners.api.model.Transaction;
+import app.bpartners.api.model.TransactionCategory;
+import app.bpartners.api.model.entity.HTransactionCategory;
+import org.springframework.stereotype.Component;
+
+@Component
+public class TransactionMapper {
+  public Transaction toDomain(app.bpartners.api.repository.swan.schema.Transaction external,
+                              TransactionCategory category) {
+    return Transaction.builder()
+        .transactionId(external.node.id)
+        .amount(external.node.amount.value)
+        .currency(external.node.amount.currency)
+        .label(external.node.label)
+        .reference(external.node.reference)
+        .paymentDatetime(external.node.createdAt)
+        .category(category)
+        .build();
+  }
+
+  public TransactionCategory toDomain(HTransactionCategory entity) {
+    return TransactionCategory.builder()
+        .id(entity.getId())
+        .label(entity.getLabel())
+        .build();
+  }
+}
