# src/main/java/app/bpartners/api/repository/TransactionRepository.java
@@ -1,0 +1,8 @@
+package app.bpartners.api.repository;
+
+import app.bpartners.api.model.Transaction;
+import java.util.List;
+
+public interface TransactionRepository {
+  List<Transaction> getTransactions();
+}
